fix sponsors spacing

--- a/djangocon_2022/static/sass/_homepage.scss
+++ b/djangocon_2022/static/sass/_homepage.scss
@@ -199,9 +199,13 @@
       max-width: 12rem;
       margin-top: 2rem;
       padding-top: .75rem;
+      margin-right: .875rem;
+      margin-left: .875rem;
     }
     p {
       padding-top: .75rem;
+      margin-right: .875rem;
+      margin-left: .875rem;
     }
     .sponsor {
       height: 50px;
